add thymeleaf to homepage

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,84 +1,42 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
-	<title>TriCount</title>
-	<meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
-	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/style.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>TriCount</title>
+<meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
+<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+<link rel="stylesheet" href="css/style.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body class="container">
 	<h1 class="text-center text-primary m-4">My shared expenses</h1>
-	
-	<div class="row mt-5">
-		<div class="col-md-8 offset-md-2 col-xs-10 offset-xs-1">
-			<h2 class="text-center text-warning">Our London trip</h2>
-			<table class="table table-striped">
-				<thead>
-					<tr>
-						<th>Last expenses</th>
-						<th>Made by</th>
-						<th>Amount</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<td>Cab</td>
-						<td>Robert</td>
-						<td>78 euros</td>
-					</tr>
-					<tr>
-						<td>Pub</td>
-						<td>Brian</td>
-						<td>175 euros</td>
-					</tr>
-					<tr>
-						<td>Museum</td>
-						<td>Charles</td>
-						<td>3.25 euros</td>
-					</tr>
-				</tbody>
-			</table>
-			<button type="button" class="btn btn-lg btn-primary float-end">Add
-				expense</button>
-		</div>
-	</div>
-		<hr class="col-md-4 offset-md-4 border-2 border-top border-warning mt-3">
 
-	<div class="row mt-5">
-		<div class="col-md-8 offset-md-2 col-xs-10 offset-xs-1">
-			<h2 class="text-center text-warning">Our London trip 2 - le retour</h2>
-			<table class="table table-striped">
-				<thead>
-					<tr>
-						<th>Last expenses</th>
-						<th>Made by</th>
-						<th>Amount</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<td>Cab</td>
-						<td>Robert</td>
-						<td>78 euros</td>
-					</tr>
-					<tr>
-						<td>Pub</td>
-						<td>Brian</td>
-						<td>175 euros</td>
-					</tr>
-					<tr>
-						<td>Museum</td>
-						<td>Charles</td>
-						<td>3.25 euros</td>
-					</tr>
-				</tbody>
-			</table>
-			<button type="button" class="btn btn-lg btn-primary float-end">Add
-				expense</button>
+	<th:block th:each="expenses, state : ${expenseslists}">
+		<div class="row mt-5">
+			<div class="col-md-8 offset-md-2 col-xs-10 offset-xs-1">
+				<h2 class="text-center text-warning" th:text="${expenses.name}">expense
+					list name</h2>
+				<table class="table table-striped">
+					<thead>
+						<tr>
+							<th>Last expenses</th>
+							<th>Made by</th>
+							<th>Amount</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr th:each="expense : ${expenses.expensesList}">
+							<td th:text="${expense.name}">Expense Name</td>
+							<td th:text="${expense.owner.name}">Expense owner</td>
+							<td th:text="${expense.amount}">Expense amount</td>
+						</tr>
+					</tbody>
+				</table>
+				<button type="button" class="btn btn-lg btn-primary float-end">Add expense</button>
+			</div>
 		</div>
-	</div>
-		<hr class="col-md-4 offset-md-4 border-2 border-top border-warning mt-3">
+<!-- 		Separator : hidden if is the last, visible otherwise  -->
+		<hr class="col-md-4 offset-md-4 border-2 border-top border-warning mt-3" th:classappend="${state.last} ? 'd-none' : 'd-block'">
+	</th:block>
 
 </body>
 </html>
