--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,9 +5,14 @@
 	<meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
 	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css">
+	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body class="container">
+
+<body>
+<header th:replace="fragments/header.html :: head"> your header here</header>
+<section>
+<div class="container">
 	<h1 class="text-center text-primary m-4">My shared expenses</h1>
 	
 	<div class="row mt-5">
@@ -79,6 +84,9 @@
 		</div>
 	</div>
 		<hr class="col-md-4 offset-md-4 border-2 border-top border-warning mt-3">
-
+</div>
+</section>
+<footer class="footer" th:replace="fragments/footer.html :: tail"> your footer here</footer>
 </body>
 </html>
+
