Maxime WIP unstable commit for demonstration purpose

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -17,17 +17,17 @@
   <div class="header" >
       <nav class="navbar navbar-dark bg-primary">
         <div class="pos-f-t bootstrap">
-        <img src="Images/images.png" alt="Share money" height="50px" width="50px" >
+<!--        <img src="Images/images.png" alt="Share money" height="50px" width="50px" >-->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>   
         </button>
         <h3 class="text-center text-warning">Home</h3>
       </div>
       <a href="index.html" class="pageTitleLink"><h1 class="pageTitle text-warning">TriCount<br>Manage your money</h1></a>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
-        </form>
+<!--        <form class="form-inline my-2 my-lg-0">-->
+<!--          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">-->
+<!--          <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>-->
+<!--        </form>-->
       </nav>
     
       <div class="collapse" id="navbarToggleExternalContent">
