--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,8 +17,7 @@
 	<th:block th:each="expenses, state : ${expenseslists}">
 		<div class="row mt-5">
 			<div class="col-md-8 offset-md-2 col-xs-10 offset-xs-1">
-				<h2 class="text-center text-warning" th:text="${expenses.name}">expense
-					list name</h2>
+				<h2 class="text-center text-warning" th:text="${expenses.name}">expenselist name</h2>
 				<table class="table table-striped">
 					<thead>
 						<tr>
