Addition of expense list working, pursuing the rest

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -14,8 +14,8 @@
 </head>
 
 <body>  
-<footer class="footer" th:fragment="tail">            
-    <h4 class="text-center text-warning text-bold"> Tricount Corporate<br> Wild code school 2021</h4>
+<footer class="wrapper flex-grow-1" th:fragment="tail">
+    <h6 class="text-center text-warning text-bold"> Tricount Corporate<br> Wild code school 2021</h6>
 </footer>
 </body>
 
