--- a/src/main/resources/templates/editexpenselist.html
+++ b/src/main/resources/templates/editexpenselist.html
@@ -14,7 +14,7 @@
   <div class="container">
     <h1 class="text-center text-primary m-4" th:text="${expenselist.id} ? 'Edit Expense List': 'Create Expense List'">Create Expense List</h1>
     <form action="#"  method="POST" th:action="@{/expenseslist}" th:object="${expenselist}">
-      <input name="id" th:field="*{id}" type="hidden">
+<!--      <input name="id" th:field="*{id}" type="hidden">-->
       <label for="expense-list-name">Expense List Name:</label>
       <input id="expense-list-name" name="name" placeholder="Expense List Name" required th:field="*{name}" type="text">
       <input type="submit" value="Send">
