--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -25,7 +25,7 @@
       <a href="index.html" class="pageTitleLink"><h1 class="pageTitle text-warning">TriCount<br>Manage your money</h1></a>
         <form class="form-inline my-2 my-lg-0">
           <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
+<!--          <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>-->
         </form>
       </nav>
     
@@ -33,7 +33,7 @@
           <div class="bg-primary p-4">
               <ul class="navbar-nav">
                   <li class="nav-item "><a class="nav-link text-warning font-weight-bold" href="#"><i class="fas fa-home"></i><span class="navbar-title"> Home</span></a></li>
-                  <li class="nav-item"><a class="nav-link text-warning font-weight-bold" href="editlist"><i class="fas fa-plus"></i><span class="navbar-title"> Create expenses lists</span></a></li>
+                  <li class="nav-item"><a class="nav-link text-warning font-weight-bold" href="#"><i class="fas fa-plus"></i><span class="navbar-title"> Create expenses lists</span></a></li>
                   <li class="nav-item"><a class="nav-link text-warning font-weight-bold" href="#"><i class="fas fa-users"></i><span class="navbar-title"> Manage Contacts</span> </a></li>   
 
               </ul>
@@ -42,10 +42,7 @@
     </div>
   <br>
   <div class="container">
-  </div>
-  <footer class="footer">            
-    <h4 class="text-center text-warning text-bold"> Tricount Corporate<br> Wild code school 2021</h4>
-</footer>
+  </div
 </body>
 
 </html>
