Added feature to remove an expenseList by clicking on trash icon --- no confirmation asked yet

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -9,6 +9,6 @@ hr:last-child {
 /*****
 Some buttons css
  */
-.btn-label {position: relative;left: -12px;display: inline-block;padding: 6px 12px;background: rgba(0,0,0,0.15);border-radius: 3px 0 0 3px;}
+.btn-label {position: relative;display: inline-block;padding: 6px 12px;border-radius: 4px 0 0 4px;}
 .btn-labeled {padding-top: 0;padding-bottom: 0;}
 .btn { margin-bottom:10px; }
