--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -3,7 +3,7 @@
 <head>
   <title>TriCount</title>
   <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
-  <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+<!--  <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">-->
   <link rel="stylesheet" href="css/style_menu.css">
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -24,7 +24,7 @@
         </button>
         <h3 class="text-center text-warning">Home</h3>
       </div>
-      <a href="index.html" class="pageTitleLink"><h1 class="text-center pageTitle text-warning">TriCount<br>Manage your money</h1></a>
+      <a href="index.html" class="pageTitleLink"><h1 class="pageTitle text-warning">TriCount<br>Manage your money</h1></a>
 <!--        <form class="form-inline my-2 my-lg-0">-->
 <!--          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">-->
 <!--          <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>-->
