--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,14 +3,14 @@
 	<head>
 		<title>TriCount</title>
 		<meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
-		<link rel="stylesheet" href="bootstrap/css/bootstrap.css">
+		<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 		<link rel="stylesheet" href="bootstrap/css/icons/bootstrap-icons.css">
 		<link rel="stylesheet" href="css/style.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 
 	<body>
-	<header th:replace="fragments/header.html :: head"> your header here</header>
+	<header th:replace="fragments/header.html :: head"></header>
 	<section>
 	<div class="container">
 		<h1 class="text-center text-primary m-4">My shared expenses</h1>
@@ -41,7 +41,7 @@
 							</tr>
 						</tbody>
 					</table>
-					<button type="button" class="btn btn-lg btn-primary float-end">Add expense</button>
+<!--					<button type="button" class="btn btn-lg btn-primary float-end">Add expense</button>-->
 				</div>
 			</div>
 		</div>
