--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,9 +3,9 @@
 	<head>
 		<title>TriCount</title>
 		<meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
-		<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-		<link rel="stylesheet" href="bootstrap/css/icons/bootstrap-icons.css">
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
+		<link rel="stylesheet" href="/bootstrap/css/icons/bootstrap-icons.css">
+		<link rel="stylesheet" href="/css/style.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 
@@ -13,18 +13,18 @@
 	<header th:replace="fragments/header.html :: head"></header>
 	<section>
 	<div class="container">
-		<h1 class="text-center text-primary m-4">My shared expenses</h1>
+		<h1 class="text-center text-primary m-4">All shared expenses</h1>
 
 		<th:block th:each="expenses, state : ${expenseslists}">
 			<div class="row mt-5">
 				<div class="col-md-8 offset-md-2 col-xs-10 offset-xs-1">
 					<h2 class="text-center text-warning" th:text="${expenses.name}"></h2>
 					<h4 class="text-center">
-						<a th:href="@{/expenseslist/delete/{idList}(idList=${expenses.id})}">
+						<a class="text-decoration-none" th:href="@{/expenseslist/delete/{idList}(idList=${expenses.id})}">
 							<button type="button" class="btn btn-labeled btn-danger">
 							<span class="btn-label"><i class="bi-trash"></i></span></button>
 						</a>
-						<a th:href="@{/createorupdatelist/{id}(id=${expenses.id})}">
+						<a class="text-decoration-none" th:href="@{/createorupdatelist/{id}(id=${expenses.id})}">
 							<button type="button" class="btn btn-labeled btn-success">
 								<span class="btn-label"><i class="bi-pencil"></i></span></button>
 						</a>
