--- a/src/main/resources/templates/createorupdatelist.html
+++ b/src/main/resources/templates/createorupdatelist.html
@@ -3,9 +3,11 @@
 <head>
   <title>TriCount</title>
   <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
-  <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
+  <link rel="stylesheet" href="/css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="/css/tom-select.bootstrap5.css">
+  <script src="/js/tom-select.complete.js"></script>
 </head>
 
 <body>
@@ -17,6 +19,17 @@
       <input name="id" th:field="*{id}" type="hidden">
       <label for="expense-list-name">Expense List Name:</label>
       <input id="expense-list-name" name="name" placeholder="Expense List Name" required th:field="*{name}" type="text">
+      <select th:field="*{participants}" id="participants" name="participants[]" multiple placeholder="Add a participant..." autocomplete="on">
+        <option value="">Add a participant...</option>
+        <option th:each="contact : ${expenselistdto.contacts}"
+                th:value="${contact.id}"
+                th:utext="${contact.name}"/>
+      </select>
+      <script>
+        var config = {};
+        new TomSelect('#participants',config);
+      </script>
+      <br />
       <input type="submit" value="Send">
     </form>
   </div>
