--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -34,8 +34,8 @@
             <div class="bg-primary p-4">
                 <ul class="navbar-nav">
                     <li class="nav-item "><a class="nav-link text-warning font-weight-bold" href="/"><i class="fas fa-home"></i><span class="navbar-title"> Home</span></a></li>
-                    <li class="nav-item"><a class="nav-link text-warning font-weight-bold" href="createorupdatelist"><i class="fas fa-plus"></i><span class="navbar-title"> Create expenses list</span></a></li>
-                    <li class="nav-item"><a class="nav-link text-warning font-weight-bold" href="contacts"><i class="fas fa-users"></i><span class="navbar-title"> Manage Contacts</span> </a></li>
+                    <li class="nav-item"><a class="nav-link text-warning font-weight-bold" href="/createorupdatelist"><i class="fas fa-plus"></i><span class="navbar-title"> Create expenses list</span></a></li>
+                    <li class="nav-item"><a class="nav-link text-warning font-weight-bold" href="/contacts"><i class="fas fa-users"></i><span class="navbar-title"> Manage Contacts</span> </a></li>
 
                 </ul>
             </div>
