--- a/src/main/resources/templates/contacts.html
+++ b/src/main/resources/templates/contacts.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
-	<title>TriCount</title>
-	<meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
-	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" href="bootstrap/css/icons/bootstrap-icons.css">
-	<link rel="stylesheet" href="css/style.css">
-	<script src="bootstrap/js/bootstrap.bundle.min.js"></script>
-	<script src="bootstrap/js/bootstrap.min.js"></script>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>TriCount</title>
+<meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
+<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+<link rel="stylesheet" href="css/style.css">
+<script src="bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="bootstrap/js/bootstrap.min.js"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body>
-<header th:replace="fragments/header.html :: head"></header>
-
-	<div class="container">
-
+<body class="container">
+	
+	<header th:replace="fragments/header.html :: head"> your header here</header>
+	
 	<h1 class="text-center text-primary m-4">Manage Contacts</h1>
 	<div class = "row mr-1">
 		<div class="col"></div>
@@ -62,7 +60,7 @@
 	</div>
 	
 	
-	<th:block th:each="contact, state : ${contacts}">
+	<th:block th:each="contact, status : ${contacts}">
 		<div class="container mr-1">
 			<div class="row">
 				<div class="col col-md-auto">
@@ -71,17 +69,21 @@
 				<div class="col">
 					<div class="row">
 						<div class = "col" th:text="${contact.name}">Name</div>
-<!--						<div class = "col col-md-auto"><input type="image" data-bs-toggle="modal" data-bs-target="#modal-edit_contact" id="btnEditContact" src="Images/crayon.jpg" alt="Edit" height="26px" width="26px" ></div>-->
+						<div class = "col col-md-auto">
+							<input type="image" data-bs-toggle="modal" th:attr="data-bs-target=${'#modaleditcontact'+status.index}" 
+							id="btnEditContact" src="Images/crayon.jpg" alt="Edit" height="26px" width="26px" >
+						</div>
 					</div>
 					<div class="row">
 						<div class = "col" th:text="${contact.email}">Email</div>
-						<div class = "col col-md-auto"><a data-toggle="modal" data-target="#modal-warning" 
-							th:attr="data-target='#modal-warning'+${contact.name }">
-<!--							<input type="image" id="btnDelContact" data-bs-toggle="modal" data-bs-target="#modal-del_contact" src="Images/delete.jpg" alt="Delete" height="26px" width="26px" ></a></div>-->
+						<div class = "col col-md-auto">
+							<input type="image" data-bs-toggle="modal" th:attr="data-bs-target=${'#modaldelcontact'+status.index}" 
+							id="btnDelContact" src="Images/delete.jpg" alt="Delete" height="26px" width="26px" >
+						</div>
 					</div>
-
 					<!--  Modal Update -->
-					<div class="modal fade" id="modal-edit_contact" tabindex="-1" aria-labelledby="editContactLabel" aria-hidden="true">
+					<div class="modal fade" th:attr="id=${'modaleditcontact'+status.index}" tabindex="-1" 
+					aria-labelledby="editContactLabel" aria-hidden="true">
 					  <div class="modal-dialog">
 					    <div class="modal-content">
 					      <div class="modal-header">
@@ -89,12 +91,6 @@
 					        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 					      </div>
 					      <form action="/contact" method="post" th:object="${contact}">
-					      <div class="modal-header">
-					        <h5 class="modal-title">Edit Contact</h5>
-					        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-					      </div>
-					      <form action="/contact" method="post">
-
 						      <div class="modal-body">
 							      <div class="container-fluid">
 							        Update informations for the contact:<br>
@@ -127,18 +123,18 @@
 					</div>
 
 					<!--  Modal Delete -->
-					<div class="modal modal-warning fade" id="modal-del_contact" tabindex="-1" aria-labelledby="delContactLabel" aria-hidden="true">
+					<div class="modal modal-warning fade" th:attr="id=${'modaldelcontact'+status.index}" tabindex="-1" aria-labelledby="delContactLabel" aria-hidden="true">
 					  <div class="modal-dialog">
 					    <div class="modal-content">
 					      <div class="modal-header">
 					        <h5 class="modal-title" id="delContactLabel">Delete Contact</h5>
 					        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 					      </div>
-					      <form action="/contact" method="delete" th:object="${contact}">
+					      <form action="/del_contact" method="post" th:object="${contact}">
 						      <div class="modal-body">
-								<h3>Are you sure want to delete this contact?</h3>	      
+								<h3>Are you sure you want to delete this contact?</h3>	      
 								</div>
-								<!-- <input class="d-none" type="number" name="id" th:value=${contact.id}>  -->  
+								<input class="d-none" type="number" name="id" th:value=${contact.id}>  
 						      <div class="modal-footer">
 						        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
 						        <button type="submit" class="btn btn-warning" id="btnDelContactSave">Delete</button>
@@ -152,7 +148,7 @@
 			</div>
 		</div>
 <!-- 		Separator : hidden if is the last, visible otherwise  -->
-		<hr class="col-md-4 offset-md-4 border-2 border-top border-warning mt-3" th:classappend="${state.last} ? 'd-none' : 'd-block'">
+		<hr class="col-md-4 offset-md-4 border-2 border-top border-warning mt-3" th:classappend="${status.last} ? 'd-none' : 'd-block'">
 	</th:block>
 
 
