--- a/src/main/resources/templates/updateexpenselist.html
+++ b/src/main/resources/templates/updateexpenselist.html
@@ -14,8 +14,8 @@
 <header th:replace="fragments/header.html :: head">header</header>
 <section>
   <div class="container">
-    <h1 class="text-center text-primary m-4" th:text="${expenselistdto.id} ? 'Edit an expenses List': 'Create a shared expenses List'"></h1>
-    <form action="#"  method="POST" th:action="@{/expenseslist}" th:object="${expenselistdto}">
+    <h1 class="text-center text-primary m-4">Edit an expenses List</h1>
+    <form action="#" method="POST" th:action="@{/updateexpenseslist}" th:object="${updateexpenselistdto}">
       <input name="id" th:field="*{id}" type="hidden">
       <label for="expense-list-name">Expense List Name:</label>
       <input id="expense-list-name" name="name" placeholder="Expense List Name" required th:field="*{name}" type="text">
@@ -30,7 +30,7 @@
         new TomSelect('#contacts',config);
       </script>
       <br />
-      <input type="submit" value="Send">
+      <input type="submit" value="Update">
     </form>
   </div>
 </section>
