--- a/src/main/resources/templates/updateexpenselist.html
+++ b/src/main/resources/templates/updateexpenselist.html
@@ -17,8 +17,10 @@
     <h1 class="text-center text-primary m-4">Edit an expenses List</h1>
     <form action="#" method="POST" th:action="@{/updateexpenseslist}" th:object="${updateexpenselistdto}">
       <input name="id" th:field="*{id}" type="hidden">
-      <label for="expense-list-name">Expense List Name:</label>
-      <input id="expense-list-name" name="name" placeholder="Expense List Name" required th:field="*{name}" type="text">
+      <label for="expense-list-name">Expense List Name:</label><br /><br />
+      <input class="form-control" id="expense-list-name" name="name" placeholder="Expense List Name" required th:field="*{name}" type="text">
+      <br /><hr class="col-md-4 offset-md-4 border-2 border-top border-warning mt-3">
+      <label for="contacts">Participants of the list:</label><br /><br />
       <select th:field="*{idContacts}" id="contacts" name="idContacts[]" multiple placeholder="Add a participant..." autocomplete="on">
         <option value="">Add a participant...</option>
         <option th:each="contact : ${contactsdto}"
@@ -29,8 +31,8 @@
         var config = {};
         new TomSelect('#contacts',config);
       </script>
-      <br />
-      <input type="submit" value="Update">
+      <br /><br />
+      <input type="submit" value="Update List" class="btn btn-primary">
     </form>
   </div>
 </section>
