--- a/src/main/resources/templates/contacts.html
+++ b/src/main/resources/templates/contacts.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
-<title>TriCount</title>
-<meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
-<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-<link rel="stylesheet" href="css/style.css">
-<script src="bootstrap/js/bootstrap.bundle.min.js"></script>
-<script src="bootstrap/js/bootstrap.min.js"></script>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>TriCount</title>
+	<meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
+	<link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="/bootstrap/css/icons/bootstrap-icons.css">
+	<link rel="stylesheet" href="/css/style.css">
+	<script src="bootstrap/js/bootstrap.bundle.min.js"></script>
+	<script src="bootstrap/js/bootstrap.min.js"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body class="container">
-	
-	<header th:replace="fragments/header.html :: head"> your header here</header>
-	
+<body>
+<header th:replace="fragments/header.html :: head"></header>
+
 	<h1 class="text-center text-primary m-4">Manage Contacts</h1>
 	<div class = "row mr-1">
-		<div class="col"></div>
-		<div class="col col-md-auto col-xs-3">
+		<div class="col-md-12 text-center">
     		<button type="button" class="btn btn-block btn-primary" data-bs-toggle="modal" data-bs-target="#modal-new_contact">Add a new contact</button>
 		</div>
 	</div>
