--- a/src/main/resources/templates/balanceexpenses.html
+++ b/src/main/resources/templates/balanceexpenses.html
@@ -18,15 +18,24 @@
 		<h2 class="text-primary m-4">List: <span th:text="${balExpenseDto.name}">list name</span></h2>
 		<h3 class="test-primary">Total spending: <span th:text="${balExpenseDto.total}">total</span></h3>
 		<hr class="col-md-4 offset-md-4 border-2 border-top border-warning mt-3" >
+		<div class="col"> 
+			<div class="row">
+				<div class = "col" ><b>Name</b></div>
+				<div class = "col" ><b>Amount due</b></div>
+				<div class = "col" ><b>Amount spent</b></div>
+			</div>
+		</div>
 		<th:block th:each="contact, status : ${balExpenseDto.lstContacts}">
 		<div class="col">
 			<div class="row">
-				<div class = "col" th:text="${contact.key.name}">Name</div>
-				<div class = "col" th:text="${contact.value}">Solde</div>
+				<div class = "col" th:text="${contact.name}">Name</div>
+				<div class = "col" th:text="${contact.amountDue}">Dépenses beneficiées</div>
+				<div class = "col" th:text="${contact.amountSpend}">Dépenses faites</div>
 			</div>
 		</div>
+		</th:block>
 		<hr class="col-md-4 offset-md-4 border-2 border-top border-warning mt-3" >
-		<button type="submit" class="btn btn-primary">Rebalance Spending</button>
+		<button type="submit" class="btn btn-primary center">Rebalance Spending</button>
 		
 		</div>
 	</section>
