Modified Expense Service, controller & DTO to work with ExpenseList, now contacts are retrieved from COntactList participants and expenseList id is integrated

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -68,7 +68,7 @@
 						</tbody>
 					</table>
 					<div class="align-items-end">
-						<a class="text-decoration-none" th:href="@{/updatelist/{id}(id=${expenses.id})}">
+						<a class="text-decoration-none" th:href="@{/createexpense/{id}(id=${expenses.id})}">
 							<button type="button" class="btn btn-labeled btn-rounded btn-success" title="Add expense to this list">
 								<span class="btn-label"><i class="bi-plus-circle-fill"></i></span></button>
 						</a>
