Expense creation fully functionnal but the beneficiaries to do (but no big deal here), redirect to the associated list once expense created. Added time format annotation in CreateExpenseDTO, adjusted the ExpenseService mapfromdtotoexpense to take all the fields in account

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -5,7 +5,7 @@ body {
 hr:last-child {
 	visibility: hidden;
 }
-.pageTitleLink:hover {
+.pageTitleLink, .pageTitleLink:hover {
 	text-decoration: none;
 }
 
