--- a/src/main/resources/templates/createexpense.html
+++ b/src/main/resources/templates/createexpense.html
@@ -10,13 +10,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<header th:replace="fragments/header.html :: head"> your header here</header>
+<header th:replace="fragments/header.html :: head">header</header>
     <section>
         <div class="container">
             <h1 class="text-center text-warning" th:text="${createexpensedto.readExpenseListDto.name}"></h1>
             <h2 class="text-center text-primary m-4">Create an expense </h2>
             <form action="#"  method="POST" th:action="@{/expense}" th:object="${createexpensedto}">
-<!--                <input name="id" th:field="*{expenselistid}" type="hidden">-->
+                <input name="expenseListId" th:field="*{expenseListId}" type="hidden">
                 <div class="modal-body">
                 <div class="row justify-content-center">
                     <div class="col-2 col-sm-2">
@@ -25,7 +25,7 @@
                     <div class="col-2 col-sm-2">
                         <input id="expense-name" th:field="*{name}" name="name" placeholder="Expense Name" type="text">
                     </div>
-                </div>
+                </div><br />
 
                <div class="row justify-content-center">
                     <div class="col-2 col-sm-2">
@@ -39,16 +39,16 @@
                                     th:utext="${contact.name}"/>
                         </select>
                     </div>
-               </div>
+               </div><br />
 
                <div class="row justify-content-center">
                     <div class="col-2 col-sm-2">
-                        <label for="date">Expense date:</label>
+                        <label for="expensedate">Expense date:</label>
                     </div>
                     <div class="col-2 col-sm-2">
-                        <input id="date" name="date" placeholder="Expense Date"  type="date">
+                        <input id="expensedate" name="expensedate" th:field="*{expenseDate}" placeholder="Expense Date"  type="date">
                     </div>
-               </div>
+               </div><br />
 
 
                <div class="row justify-content-center">
@@ -58,7 +58,7 @@
                    <div class="col-2 col-sm-2">
                        <input id="amount" name="amount" placeholder="Expense Amount"  type="text">
                    </div>
-               </div>
+               </div><br />
                 <br />
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
