--- a/src/main/resources/templates/updateexpenselist.html
+++ b/src/main/resources/templates/updateexpenselist.html
@@ -37,6 +37,10 @@
 
     <hr class="col-md-4 offset-md-4 border-2 border-top border-warning mt-3">
     <h2 class="text-center text-warning">All expenses</h2>
+      <a class="text-decoration-none" th:href="@{/createexpense/{id}(id=${id})}">
+        <button type="button" class="btn btn-labeled btn-rounded btn-success" title="Add expense to this list">
+          <span class="btn-label"><i class="bi-plus-circle-fill"></i></span></button>
+      </a>
 <!--    <th:block >-->
       <div class="row mt-5">
 <!--        <div class="col-md-8 offset-md-2 col-xs-10 offset-xs-1">-->
