--- a/src/main/resources/templates/createexpense.html
+++ b/src/main/resources/templates/createexpense.html
@@ -15,10 +15,10 @@
         <div class="container">
             <h1 class="text-center text-primary m-4">Create an expense </h1>
             <form action="#"  method="POST" th:action="@{/expense}" >
-                <div class="modal-body">
+                <div class="form-group">
                 <div class="row justify-content-center">
                     <div class="col-2 col-sm-2">
-                        <label for="expense-name"> Expense Name:</label>
+                        <label for="expense-name"> Expense Name</label>
                     </div>
                     <div class="col-2 col-sm-2">
                         <input id="expense-name" name="name" placeholder="Expense Name"  type="text">
@@ -27,7 +27,7 @@
 
                <div class="row justify-content-center">
                             <div class="col-2 col-sm-2">
-                                <label for="owner">Expense Owner:</label>
+                                <label for="owner">Expense Owner</label>
                             </div>
                             <div class="col-2 col-sm-2">
                                 <select class="custom-select" required th:field="*{contactsdto}"  type="text">
@@ -41,7 +41,7 @@
 
                <div class="row justify-content-center">
                                 <div class="col-2 col-sm-2">
-                                    <label for="date">Expense date:</label>
+                                    <label for="date">Expense Date</label>
                                 </div>
                                 <div class="col-2 col-sm-2">
                                     <input id="date" name="date" placeholder="Expense Date"  type="date">
@@ -51,7 +51,7 @@
 
                <div class="row justify-content-center">
                                <div class="col-2 col-sm-2">
-                                   <label for="amount">Expense Amount:</label>
+                                   <label for="amount">Expense Amount</label>
                                </div>
                                <div class="col-2 col-sm-2">
                                    <input id="amount" name="amount" placeholder="Expense Amount"  type="text">
@@ -65,5 +65,6 @@
             </form>
         </div>
     </section>
+<footer class="footer" th:replace="fragments/footer.html :: tail"> your footer here</footer>
 </body>
 </html>
