--- a/src/main/resources/templates/createexpense.html
+++ b/src/main/resources/templates/createexpense.html
@@ -94,8 +94,7 @@
 					
 					<br />
 					<div class="modal-footer">
-						<button type="button" class="btn btn-secondary"
-							data-bs-dismiss="modal">Cancel</button>
+						<a href="/" class="btn secondary" role="button">Cancel</a>
 						<button type="submit" class="btn btn-primary">Create</button>
 					</div>
 					<br>
